# entry-api

./: .gitignore  CLAUDE.md  compose.yaml  jvm_aarch64.yaml  jvm_amd64.yaml  pom.xml
.github/workflows/: ci.yaml  cli-build.yml
cli/: .gitignore  Cargo.toml  README.md
cli/src/: cli.rs  config.rs  error.rs  main.rs
cli/src/client/: mod.rs  models.rs
cli/src/commands/: category.rs  config.rs  entry.rs  mod.rs  tag.rs
cli/tests/: integration_test.rs
docs/: api.md
src/main/resources/: application-dsql.properties  application-redis.properties  application.properties  schema-dsql.sql  schema-postgresql.sql  schema.sql
src/test/resources/: logback-test.xml
src/test/resources/sql/: clean-table.sql
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  main.tsx
ui/src/components/: index.ts
ui/src/components/auth/: ProtectedRoute.tsx
ui/src/components/common/: Button.tsx  DiffViewer.tsx  ErrorAlert.tsx  LoadingSpinner.tsx  index.ts
ui/src/components/forms/: CategoryInput.tsx  Input.tsx  TagInput.tsx  Textarea.tsx  index.ts
ui/src/components/layout/: Header.tsx  Layout.tsx  index.ts
ui/src/components/providers/: AuthProvider.tsx
ui/src/hooks/: index.ts  useApi.ts  useAuth.ts  useTenant.ts
ui/src/pages/entries/: CreateEntry.tsx  EditEntry.tsx  EntryDetail.tsx  EntryForm.tsx  EntryList.tsx  EntryPreview.tsx  index.ts
ui/src/pages/tenant/: TenantSelector.tsx  index.ts
ui/src/services/: api.ts
ui/src/styles/: md-editor.css
ui/src/types/: api.ts  index.ts  state.ts
ui/src/utils/: markdown.ts
(+93 files in other folders)
